Updated FInal Project
Updated Final Project

--- a/donate.html
+++ b/donate.html
@@ -19,4 +19,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
+
+    <h2>Help Keep your Community Safe</h2>
+    <p>Consider a one-time or recurring gift to support critical services in your community. Each donation keeps the community safe, now and into the future.</p>
   </body>            
