--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
       
           <div class="item">
-            <img src="img/AARescue.jpg" alt="American Airlines Rescue">
+            <img src="img/aarescue.jpg" alt="American Airlines Rescue">
           </div>
       
           <div class="item">
@@ -83,9 +83,13 @@
       </div>
       </div>
 <br>
-    <footer>
+    <footer id="footer">
         <p>In cooperation with:</p>
+        <br>
             <img src="img/WegoFPDcross.png" width=100px height=100px>
             <img src="img/WCPD Logo.jpeg" width=250px height=100px>
     </footer>
+    <br>
+    <br>
+    <br>
 </body>
