--- a/projects.html
+++ b/projects.html
@@ -20,13 +20,31 @@
         </ul>
 </div>
 
-<h3>Previous Projects</h3>
-<img src="img/lightning.jpg">
+<div id="signs">
+<h1>Responding to Emergencies</h1>
+<p id="taglines"> high-visibility signs improve response times and save lives</p>
 
-<h3>Current Projects</h3>
+<div class="container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-3">
+              <h2 id="signbutton">Sign up for your free address sign here <a href="signs.html">Free Sign</a></h2>
+              </div>
+              </div>
+              </div>
+<p>Do you live at an uncorporated address? The West Chicago Fire Department has a high-visibility address sign to install on your mailbox to help emergency crews find your address easily in case of an emergency. The Fire Department will install the signs throughout the Spring of 2018. You can see when they will be in your neighborhood here: <a href="">Schedule</a>. Prior to installing, the fire department will knock on your door to receive permission, however, if you use the form to give your authorization, your sign will be installed. You can give your permission here: <a href="">Signs.</a> </p>
+<img src="img/lightning.jpg">
+</div>
+
+<h1>Keeping Our Community Safe</h1>
+<p id="taglines">installations highlight close community partnerships</p>
+<p>In partnership with the West Chicago Park District, the Foundation provided early warning lightning detection systems for local parks. These systems warn of impending lightning strikes, giving patrons time to get indoors.</p>
+
+<p>In partnership with XYZ church, the Foundation provided AED's which provide an early opportunity to save someone's life who has suffered from a heart attack.</p>
 <img src="img/sign.jpg">
 
-<h3>Future Projects</h3>
+<h1>Fire Prevention and Safety Education</h1>
+<p id="taglines"> education and prevention tools for schools and businesses</p>
+<p>In partnership with the West Chicago Fire Protection District, the Foundation supports the Fire Safety Trailer. The Trailer visits locals schools giving children a fun and interactive way to learn about fire safety.</p>
 <img src="img/extinguisher-237643_640.jpg">
 
 
