--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
 <body>
 <h2>Contact</h2>
 
-<h4>The West Chicago please fill out the form below. Questions or comments will be answered as soon as possible.</h4>
+<p id="pinfo">If you have any questions regarding the Foundation for Fire and Life Safety, please fill out the form below. Questions or comments will be answered as soon as possible.</p>
 <main>
-<form>
-        <fieldset>
+<form action="mailto:robertn84@gmail.com" method="post" enctype="text/plain">
+        <fieldset id="fieldset">
         <legend>Contact Information</legend>
         First name:<br>
         <input type="text" name="firstname" value="First Name">
@@ -57,6 +57,10 @@
         <br>
 
         <textarea name="message" rows="10" cols="30">Enter your comments here.
-			</textarea>	
+            </textarea>	
+        <br>
+        <input type="submit" value="Submit">    
+        <br>
 			<br>
         </fieldset>
+        </form>
