--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
     <div class="row">
         <div class="col-xs-6 col-md-4">
           <a href="signs.html"> <img src="img/address_sign.jpg" width=150%> </a>
-          <imgcaption>Click here for more information on free unincorporated address signs.</imgcaption>
+          <imgcaption>Click for more information on free unincorporated address signs.</imgcaption>
         </div>
       
 
         <div class="col-xs-6 col-md-4 col-md-offset-2">
           <a href="donate.html"> <img src="img/smoke.jpg" width=150%></a>
-          <imgcaption>Click here to go to our Donate page.</imgcaption>
+          <imgcaption>Click to go to our Donate page.</imgcaption>
       </div>
       </div>
       </div>
@@ -86,10 +86,12 @@
     <footer id="footer">
         <p>In cooperation with:</p>
         <br>
-            <img src="img/WegoFPDcross.png" width=100px height=100px>
-            <img src="img/WCPD Logo.jpeg" width=250px height=100px>
+            <img id="indexphotos" src="img/WegoFPDcross.png" width=100px height=100px>
+            <img id="indexphotos" src="img/WCPD Logo.jpeg" width=250px height=100px>
+            <br>
+            <br>
+            <p>Copyright Robert Nagel 2017 | All rights reserved</p>
+            <br>
     </footer>
-    <br>
-    <br>
-    <br>
+  
 </body>
