--- a/contact.html
+++ b/contact.html
@@ -64,3 +64,5 @@
 			<br>
         </fieldset>
         </form>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d95049.38265533495!2d-88.276132784156!3d41.886550932828634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1swest+chicago+fire+protection+district!5e0!3m2!1sen!2sus!4v1512930165733" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
