--- a/projects.html
+++ b/projects.html
@@ -17,9 +17,11 @@
             <li><a href="about.html">About</a></li>
             <li><a href="donate.html">Donate</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="signs.html">Free Sign</a></li>
         </ul>
 </div>
 
+<!-- clean this site up and make actual buttons to click -->
 <h1>Responding to Emergencies</h1>
 <p id="taglines"> high-visibility signs improve response times and save lives</p>
 <div class="container">
