--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
+	  <meta charset="utf-8">
   <title>Home</title>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -18,6 +18,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="donate.html">Donate</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="signs.html">Free Sign</a></li>
     </ul>
 </div>
 
@@ -78,7 +79,7 @@
 
         <div class="col-xs-6 col-md-4 col-md-offset-2">
           <a href="donate.html"> <img src="img/smoke.jpg" width=150%></a>
-          <imgcaption>Click to go to our Donate page.</imgcaption>
+          <!-- change this into the button that they can click on --> <imgcaption>Click to go to our Donate page.</imgcaption> -->
       </div>
       </div>
       </div>
@@ -90,7 +91,7 @@
             <img id="indexphotos" src="img/WCPD Logo.jpeg" width=250px height=100px>
             <br>
             <br>
-            <p>Copyright Robert Nagel 2017 | All rights reserved</p>
+            <p>Copyright Robert Nagel 2018 | All rights reserved</p>
             <br>
     </footer>
   
