--- a/signs.html
+++ b/signs.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- Clean up and improve site -->
 <head>
 	<meta charset="utf-8">
 	<title>Signs</title>
@@ -17,6 +17,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="donate.html">Donate</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="signs.html">Free Sign</a></li>
     </ul>
 </div>
 
