--- a/signs.html
+++ b/signs.html
@@ -6,9 +6,11 @@
 	<title>Signs</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/buttons.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">  
     <link rel="stylesheet" href="css/site.css">
 </head>
+<body>
 
 <div id="centeredmenu">
     <ul>
@@ -26,6 +28,15 @@
 Additionally, if you have special instructions that you want followed, please indicate that in the comments box, and the fire department will their best to accomodate them. Without prior authorization, the fire department will visit each residence to obtain permission. 
 
 For more information on the unincorporated address signs, please visit our <a href="projects.html">Projects Page</a>.</p>
+
+<div>
+    <h1>Installation Schedules</h1>
+    <button id="installation_1" title="May">May 2018</button>
+    <button id="installation_2">June 2018</button>
+    <button id="installation_3">July 2018</button>
+    <button id="installation_3">August 2018</button>
+</div>
+
 
     <form action="mailto:robertn84@gmail.com" method="post" enctype="text/plain">
         
@@ -79,3 +90,5 @@ For more information on the unincorporated address signs, please visit our <a hr
             <div class="col-md-4 col-md-offset-2"><img src="img/sign2.jpg"></div>
         </div>
     </div>
+
+    </body>
