--- a/signs.html
+++ b/signs.html
@@ -35,6 +35,10 @@ For more information on the unincorporated address signs, please visit our <a hr
     <button id="installation_2">June 2018</button>
     <button id="installation_3">July 2018</button>
     <button id="installation_3">August 2018</button>
+
+    <div id="main">
+
+    </div>
 </div>
 
 
