--- a/signs.html
+++ b/signs.html
@@ -42,7 +42,7 @@ For more information on the unincorporated address signs, please visit our <a hr
 </div>
 
 
-    <form action="mailto:robertn84@gmail.com" method="post" enctype="text/plain">
+    <!-- <form action="mailto:robertn84@gmail.com" method="post" enctype="text/plain"> -->
         
 <fieldset id="fieldset">
     <legend>Contact Information</legend>
