--- a/signs.html
+++ b/signs.html
@@ -32,9 +32,9 @@ For more information on the unincorporated address signs, please visit our <a hr
 <div>
     <h1>Installation Schedules</h1>
     <button id="installation_1" title="may">May 2018</button>
-    <button id="installation_2">June 2018</button>
-    <button id="installation_3">July 2018</button>
-    <button id="installation_3">August 2018</button>
+    <button id="installation_2" title="june">June 2018</button>
+    <button id="installation_3" title="july">July 2018</button>
+    <button id="installation_4" title="august">August 2018</button>
 
     <div id="main">
 
