--- a/register.html
+++ b/register.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Account Registration</title>
-	<style>
+	<title>Sign Submission</title>
+
+	<link rel="stylesheet" href="css/bootstrap.min.css">  
+    <link rel="stylesheet" href="css/site.css">
+	<!-- <style>
     	body {
 		    font-family: Arial, Helvetica, sans-serif;
 		    background-color: white;
@@ -12,7 +15,7 @@
 		    padding: 20px;
 		    border: 3px solid blue;
 		}
-	</style>
+	</style> -->
 	<script>
 	//<![CDATA[
 	var decode = function ( text ) {
@@ -51,11 +54,24 @@
 </head>
 
 <body>
+
+		<div id="centeredmenu">
+				<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="donate.html">Donate</a></li>
+						<li><a href="contact.html">Contact</a></li>
+						<li><a href="signs.html">Free Sign</a></li>
+				</ul>
+			</div>
+
 	<section id="content">
-	    <h1>Register for an Account</h1>
-	    <p>Your account registration has been submitted with the following
-	    information:</p>
-	    <script type="text/javascript">display_data();</script>
+		<div id="summary">
+	    <h1>Your submission has been received!</h1>
+	    <p>Thank you for your submission. We will respond to your submission within 48 hours.</p>
+		<script type="text/javascript">display_data();</script>
+		</div>
 	</section>
 </body>
 </html>
