--- a/signs.html
+++ b/signs.html
@@ -45,6 +45,7 @@ For more information on the unincorporated address signs, please visit our <a hr
 <br>
 <main>
         <h3>Signup for your free, unincorporated address sign by filling out the form below.</h3>
+        <div id="form1">
         <form action="register.html" method="get"
             name="member_form" id="member_form">
             <fieldset>
@@ -80,7 +81,7 @@ For more information on the unincorporated address signs, please visit our <a hr
             <fieldset id="buttons">
                 <legend>Submit Your Authorization</legend>
                 <label>&nbsp;</label>
-
+                <h3>Please enter any comments or special instructions below. We will do our best to follow any specific information.</h3>    
                 <textarea name="message" rows="10" cols="30"></textarea>	
                 <br>
                 <br>
@@ -94,6 +95,7 @@ For more information on the unincorporated address signs, please visit our <a hr
                 <input type="reset" id="reset" name="reset" value="Reset"><br>
             </fieldset>
         </form>
+        </div>
     </main>
 
 
