--- a/signs.html
+++ b/signs.html
@@ -57,7 +57,7 @@ For more information on the unincorporated address signs, please visit our <a hr
                 <input type="text" id="last_name" name="last_name"><br>
 
                 <label for="address">Address:</label>
-                <input type="address" id="address" name="address" placeholder="Must be a rural address" ><br>     
+                <input type="text" id="address" name="address"><br>     
 
                 <label for="city">City:</label>
                 <input type="text" id="city" name="city"><br>
