--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <h1>Welcome to the Foundation for Fire and Life Safety</h1>
-	<h2>Servering the West Chicago Fire Protection District</h2>
+	<h3>Serving the West Chicago Fire Protection District</h3>
     <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
