--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </ul>
 </div>
 
-
+	<div class="center-div"></div>
+	
     <h1>Welcome to the Foundation for Fire and Life Safety</h1>
 	<h3>Serving the West Chicago Fire Protection District</h3>
     <div class="container">
