--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     </ul>
 </div>
 
-	<div class="center-div"></div>
-	
+	<div class="center-div">
     <h1>Welcome to the Foundation for Fire and Life Safety</h1>
 	<h3>Serving the West Chicago Fire Protection District</h3>
+	</div>
+	
     <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
