--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </div>
 
     <h1>Welcome to the Foundation for Fire and Life Safety</h1>
-	<h3>Serving the West Chicago Fire Protection District</h3>
 	
+	<h3 id="center_it">Serving the West Chicago Fire Protection District</h3>
 	
     <div class="container">
         <div class="row">
